Session checkpoint: 2025-11-23-19-27-22 - Phase 1 - Phase 1: Foundation and Infrastructure